<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:padding="24dp">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvOrder"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textColor="@color/brown_dark"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/label_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvItem"
        android:textColor="@color/brown_dark"
        app:layout_constraintTop_toBottomOf="@id/tv_title"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp" />

    <TextView
        android:id="@+id/tv_total_items"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="2"
        android:textSize="16sp"
        android:textColor="@color/brown_dark"
        app:layout_constraintTop_toBottomOf="@id/label_item"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="4dp" />

    <TextView
        android:id="@+id/label_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvPrice"
        android:textColor="@color/brown_dark"
        app:layout_constraintTop_toBottomOf="@id/tv_total_items"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp" />

    <TextView
        android:id="@+id/tv_total_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Rp.600.000"
        android:textSize="16sp"
        android:textColor="@color/brown_dark"
        app:layout_constraintTop_toBottomOf="@id/label_price"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="4dp" />

    <Button
        android:id="@+id/btn_whatsapp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/btnWhatsapp"
        android:backgroundTint="@color/Green"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toBottomOf="@id/tv_total_price"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="24dp" />
</androidx.constraintlayout.widget.ConstraintLayout>
