<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@color/white">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="24dp">

        <TextView
            android:id="@+id/tv_profile_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvProfile"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/brown_dark"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/icon_name"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/baseline_person_24"
            app:layout_constraintTop_toBottomOf="@id/tv_profile_title"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="24dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_user_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/icon_name"
            app:layout_constraintTop_toTopOf="@id/icon_name"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/tfname"
                android:text="Darren" />
        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:id="@+id/icon_phone"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/baseline_contact_phone_24"
            app:layout_constraintTop_toBottomOf="@id/icon_name"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="24dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_user_phone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/icon_phone"
            app:layout_constraintTop_toTopOf="@id/icon_phone"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="30dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_user_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/tfphone"
                android:text="+62 812-3456-7890" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_history"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Riwayat Pemesanan"
            android:textColor="@android:color/white"
            android:backgroundTint="@color/pink_bold"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@id/layout_user_phone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="24dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>